--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,3 +51,45 @@ input{
     overflow: hidden;
     padding: 0 2rem;
 }
+
+table th{
+    background: var(--light-color);
+}
+
+.btn{
+    display: inline-block;
+    background: var(--light-color);
+    color: #333;
+    padding: 0.4rem 1.3rem;
+    font-size: 1rem;
+    border: none;
+    cursor: pointer;
+    margin-right: 0.5rem;
+    transition: opacity .2s;
+    outline: none;
+
+    &:disabled{
+      background: var(--dark-color);  
+      color: #fff;
+      cursor: not-allowed;
+    }
+
+    &:hover:not(:disabled){
+        opacity: .8;
+    }
+}
+
+.btn-block{
+   display: block; 
+   width: 100%;
+}
+
+.btn-primary{
+    background: var(--primary-color);
+    color: #fff;
+}
+
+
+.text-center{
+   text-align: center; 
+}
