--- a/src/app/selector/selector.component.html
+++ b/src/app/selector/selector.component.html
@@ -1,1 +1,10 @@
-<p>selector works!</p>
+<p>
+    <i class="material-icons">arrow_left</i> 
+
+    <span>
+        {{dateService.date |async | moment}}
+    </span>
+
+    <i class="material-icons">arrow_right</i> 
+
+</p>
