--- a/src/app/organizer/organizer.component.html
+++ b/src/app/organizer/organizer.component.html
@@ -1,1 +1,32 @@
-<p>organizer works!</p>
+<section>
+    <header>
+        Organizer: <strong>{{dateService.date | async | moment:'DD.MM.YYYY'}}</strong>
+        <hr/>
+    </header>
+   
+
+    <main>
+        <ul>
+            <li class="task">
+                <span>
+                    <strong>1</strong>
+                    fsfsf
+                </span>
+                <button class="btn btn-primary">Remove</button>
+            </li>
+        </ul>
+    </main>
+
+    <footer>
+        <form (ngSubmit)="submit()" [formGroup]="form">
+            <input type="text" formControlName="title">
+            <button
+            class="btn btn-primary btn-block"
+            type="submit"
+            [disabled]="form.invalid"
+            >
+            Add
+            </button>
+        </form>
+    </footer>
+</section>
